# gourmand-web-viewer

./: Cargo.toml  GourmandWebViewer.html  README.md  problemes.txt  recette.txt  recettes.txt
.github/workflows/: rust.yml
gourmand-web-viewer/: Cargo.toml  index.html
gourmand-web-viewer-cli/: Cargo.toml
gourmand-web-viewer-cli/src/: cli.rs  lib.rs  main.rs
gourmand-web-viewer-cli/src/data/: categories.json  cuisines.json  recipes.json
gourmand-web-viewer/src/: gui.rs  lib.rs  main.rs  recipe.rs
gourmand-web-viewer/src/data/: categories.json  cuisines.json  recipes.json
gourmand-web-viewer/src/gui/: style.rs
src/: cli.rs  gui.rs  lib.rs  main.rs  recipe.rs
src/data/: recipes.xml
