[package]
name = "gourmand-web-viewer"
version = "0.1.3"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "Gourmand web viewer"
homepage = "https://github.com/newca12/VersatiList"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_web = { git = "https://github.com/iced-rs/iced", branch = "master" }
include-flate = { version = "0.1.4", features = ["stable"] }
structopt = "0.3.25"
serde_derive = "1.0.132"
serde = "1.0.132"
serde-xml-rs = "0.5.1"