[package]
name = "gourmand-web-viewer"
version = "0.1.4"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "Gourmand web viewer GUI & WebApp"
homepage = "https://github.com/newca12/gourmand-web-viewer"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
iced = "0.3.0"
iced_web = "0.4.0"
include-flate = { version = "0.1.4", features = ["stable"] }
serde_derive = "1.0.136"
serde = "1.0.136"
serde_json = "1.0.79"
serde-xml-rs = "0.5.1"