[package]
name = "gourmand-web-viewer"
version = "0.1.5"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "Gourmand web viewer GUI & WebApp"
homepage = "https://github.com/newca12/gourmand-web-viewer"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version="0.14.0", features = ["image", "debug", "webgl", "fira-sans"]  }
include-flate = "0.3.1"
serde_derive = "1.0.136"
serde = "1.0.136"
serde_json = "1.0.79"
serde-xml-rs = "0.8.2"