[package]
name = "gourmand-web-viewer"
version = "0.1.5"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "Gourmand web viewer GUI & WebApp"
homepage = "https://github.com/newca12/gourmand-web-viewer"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui = "0.33.3"
include-flate = "0.3.1"
log = "0.4.29"
serde_derive = "1.0.136"
serde = "1.0.136"
serde_json = "1.0.79"
serde-xml-rs = "0.8.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
